--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
+    "fibers": "^5.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^10.4.1"
+  }
 }
